@@ -933,6 +933,7 @@ function albumOptionList($rootDisplay = true, $moveRootAlbum = false, $movePhoto
 	global $gallery, $albumDB, $index;
 
 	$uptodate = true;
+	// This gets only root albums. TODO: Naming
 	$mynumalbums = $albumDB->numAlbums($gallery->user);
 
 	$albumOptionList = array();
@@ -944,24 +945,27 @@ function albumOptionList($rootDisplay = true, $moveRootAlbum = false, $movePhoto
 			'selected' => true,
 			'disabled' => null
 		);
+
+
+		// Create a ROOT option for the user to move the album to the main display
+		if ($gallery->user->canCreateAlbums() && $rootDisplay) {
+			$albumOptionList[] = array(
+				'text'	=> gTranslate('common', "Move to top level"),
+				'value'	=> '.root'
+			);
+		}
 	}
 
-	// Create a ROOT option for the user to move the album to the main display
-	if ($gallery->user->canCreateAlbums() && $rootDisplay && !$readOnly) {
-		$albumOptionList[] = array(
-			'text'	=> gTranslate('common', "Move to top level"),
-			'value'	=> '.root'
-		);
-	}
-
-	// Display all albums that the user can move album to
+	$curAlbumName	= $gallery->album->fields['name'];
+	// Create a list of all albums where the user can copy/move items to
 	for ($i = 1; $i <= $mynumalbums; $i++) {
 		$myAlbum	= $albumDB->getAlbum($gallery->user, $i);
 		$myAlbumName	= $myAlbum->fields['name'];
 		$myAlbumTitle	= $myAlbum->fields['title'];
 
 		if ($gallery->user->canWriteToAlbum($myAlbum) ||
-		  ($readOnly && $gallery->user->canReadAlbum($myAlbum))) {
+                    ($readOnly && $gallery->user->canReadAlbum($myAlbum)))
+		{
 			if ($myAlbum->versionOutOfDate()) {
 				$uptodate = false;
 				continue;
@@ -969,7 +973,7 @@ function albumOptionList($rootDisplay = true, $moveRootAlbum = false, $movePhoto
 
 			$myAlbumTitle = truncateText($myAlbumTitle, 20, 'right');
 
-			if (!$readOnly && ($myAlbum == $gallery->album)) {
+			if ($myAlbumName == $curAlbumName) {
 				// Don't allow the user to move to the current location with
 				// value=0, but notify them that this is the current location
 				$albumOptionList[] = array(
@@ -1035,21 +1039,30 @@ function nestedAlbumOptionList($level, $albumName, $movePhoto, $readOnly) {
 			$nestedAlbum->load($myName);
 
 			if ($gallery->user->canWriteToAlbum($nestedAlbum) ||
-			  ($readOnly && $gallery->user->canReadAlbum($myAlbum))) {
+			    ($readOnly && $gallery->user->canReadAlbum($myAlbum))) {
 				$val2 = str_repeat("-- ", $level+1);
 				$val2 .= $nestedAlbum->fields['title'];
 				$val2 = truncateText($val2, 20, 'right');
 
 				if (!$readOnly && ($nestedAlbum == $gallery->album)) {
-					// Don't allow user to move to here (value=0), but
-					// notify them that this is their current location
-					$nestedAlbumOptionList[] = array(
-						'text'	=> "$val2 (". gTranslate('common', "Current location") .")",
-						'value'	=> 0
-					);
+					if ($movePhoto) {
+						// Don't allow user to move to here (value=0), but
+						// notify them that this is their current location
+						$nestedAlbumOptionList[] = array(
+							'text'	=> "$val2 (". gTranslate('common', "Current location") .")",
+							'value'	=> 0
+						);
+					}
+					else {
+						// Don't allow user to move to here (value=0), but
+						// notify them that this is their current location
+						$nestedAlbumOptionList[] = array(
+							'text'	=> "$val2 (". gTranslate('common', "Current location") .")",
+							'value'	=> $myName
+						);
+					}
 				}
-				elseif (!$readOnly &&
-					($myName == $currentAlbumName))
+				elseif (!$readOnly && ($myName == $currentAlbumName))
 				{
 				  	$nestedAlbumOptionList[] = array(
 						'text'	=> "$val2 (". gTranslate('common', "This album itself"). ")",
